--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/react-redux": "^7.1.33",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.5",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.424.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
