--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
